[project]
name = "accounts-mcp"
version = "0.1.0"
description = "MCP server for the Accounts macOS personal finance app"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
]

[project.scripts]
accounts-mcp = "accounts_mcp:main"
accounts-mcp-smoke = "smoke_test_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
